[package]
name = "sync-tokens"
version = "0.1.0"
authors = ["Andrew Rondeau <git@andrewrondeau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.*"

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
cooked-waker = "4.0.0"